--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -12,6 +12,9 @@
 }
 
 .Contador {
-    font-size: 20px;
+    font-size: 25px;
+    color: white;
+    margin-top: 7px;
     display: inline;
+    position: absolute;
 }
