--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -1,7 +1,11 @@
 .ItemCount {
+    background-color: white;
+    height: 200px;
+    width: 300px;
+}
+
+.Controls {
     display: flex;
-    height: 50px;
-    background-color: aqua;
     align-items: center;
 }
 
@@ -10,4 +14,10 @@
     height: 50px;
     width: 100%;
     font-size: 25px;
+}
+
+.Agregar {
+    background-color:  rgb(252, 112, 112);
+    padding: 15px;
+    width: auto;
 }
