--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -11,6 +11,8 @@ nav {
     width: 70px;
     margin-left: 20px;
     display: inline;
+    position: absolute;
+    left: 0px;
 }
 
 .name {
@@ -18,28 +20,35 @@ nav {
     margin-left: 20px;
     margin-top: 10px;
     position: absolute;
+    left: 8%;
     font-family: 'Oleo Script Swash Caps', cursive;
     color: white;
     font-size: 35px;
+    text-decoration: none;
 }
 
 .navbar-sections {
-    display: inline;
+    display: flex;
     width: 30%;
     height: 70px;
     position: absolute;
     left: 35%;
-
+    justify-content: center;
+    align-items: center;
 }
 
 .nav-button {
+    display: flex;
     border: none;
     height: 100%;
-    width: 33%;
+    width: 50%;
     background-color: rgb(78, 104, 126);
     color: white;
     font-family: Verdana;
-    font-size: 15px;
+    font-size: 18px;
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
 
 
 }
