--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,15 +1,23 @@
 .ItemDetail {
     width: 75%;
     float: left;
+    display: flex;
+    align-items: center;
 }
 
 .ItemImg  {
-    width: 200px;
-    height: 200px;
-    float: right;
+    width: 30%;
+    height: 20%;
 }
 
 .Description {
     width: 50%;
-    margin-left: 150px;
+}
+
+.Data {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 70%;
+    padding-top: 5%;
 }
