--- a/src/components/CartItem/CartItem.css
+++ b/src/components/CartItem/CartItem.css
@@ -1,11 +1,98 @@
-.ItemCart {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px;
-}
-
 .ItemCart p {
     font-size: 18px;
-    margin: 8px;
+    margin: 4px;
 }
+
+.cant {
+    background-color: rgb(207, 207, 207);
+    padding: 7px;
+    border-radius: 5px;
+    color: white;
+}
+
+.ItemCart {
+    display: flex;
+    align-items: center;
+    margin: 10px;
+    width: 50%;
+    color: #fff;
+    padding: 5px 10px;
+    font-weight: bold;
+    outline: none;
+    border-radius: 5px;
+    border: none;
+    background: #efefef;
+    box-shadow: 6px 6px 12px #c5c5c5,
+    -6px -6px 12px #ffffff;
+    color: #585858;
+  }
+
+.deleteCant {
+      display: flex;
+      align-items: center;
+      margin-left: auto;
+  }
+
+  /* From uiverse.io */
+.delete {
+    width: 150px;
+    height: 38px;
+    margin-left: 4px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    background: red;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 1px 1px 3px rgba(0,0,0,0.15);
+    background: #e62222;
+    font-size: 18px;
+   }
+   
+   .delete, button span {
+    transition: 200ms;
+   }
+   
+   .delete .text {
+    transform: translateX(35px);
+    color: white;
+    font-weight: bold;
+   }
+   
+   .delete .icon {
+    position: absolute;
+    border-left: 1px solid #c41b1b;
+    transform: translateX(110px);
+    height: 38px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   }
+   
+   .delete svg {
+    width: 15px;
+    fill: #eee;
+   }
+   
+   .delete:hover {
+    background: #ff3636;
+   }
+   
+   .delete:hover .text {
+    color: transparent;
+   }
+   
+   .delete:hover .icon {
+    width: 150px;
+    border-left: none;
+    transform: translateX(0);
+   }
+   
+   .delete:focus {
+    outline: none;
+   }
+   
+   .delete:active .icon svg {
+    transform: scale(0.8);
+   }
