--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -1,20 +1,26 @@
 .Widget {
-    display: inline;
+    display: flex;
     position: absolute;
     right: 100px;
-    margin-top: 10px;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+    padding-left: 5px;
+    padding-right: 5px;
+
+}
+
+.Widget:hover{
+    background-color: rgba(128, 128, 128, 0.226);
 }
 
 .CartImage {
     width: 40px;
     height: 40px;
-    display: inline;
 }
 
 .Contador {
     font-size: 25px;
     color: white;
-    margin-top: 7px;
-    display: inline;
-    position: absolute;
+    text-decoration: none;
 }
