--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -1,6 +1,8 @@
 .ItemList {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     margin: 10px;
     justify-content: center;
+    width: 100%;
 }
