--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,6 +1,11 @@
 .ItemListContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+    text-align: center;
     width: 100%;
-    height: 80vh;
+    height: 90vh;
 }
 
 .ItemListContainer h1 {
