--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,13 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@700&display=swap');
 
 nav {
-    height: 70px;
+    height: 10vh;
     align-items: center;
-    background-color: rgb(78, 104, 126);
+    background-color: rgb(101, 163, 199);;
+    box-shadow: 0px 6px 50px 2px rgba(0,0,0,0.4);
+-webkit-box-shadow: 0px 6px 50px 2px rgba(0,0,0,0.4);
+-moz-box-shadow: 0px 6px 50px 2px rgba(0,0,0,0.4);
 }
 
 .logo {
-    height: 70px;
+    height: 10vh;
     width: 70px;
     margin-left: 20px;
     display: inline;
@@ -30,7 +33,7 @@ nav {
 .navbar-sections {
     display: flex;
     width: 30%;
-    height: 70px;
+    height: 10vh;
     position: absolute;
     left: 35%;
     justify-content: center;
@@ -38,21 +41,61 @@ nav {
 }
 
 .nav-button {
-    display: flex;
-    border: none;
-    height: 100%;
-    width: 50%;
-    background-color: rgb(78, 104, 126);
-    color: white;
-    font-family: Verdana;
-    font-size: 18px;
-    text-decoration: none;
-    justify-content: center;
     align-items: center;
-
-
-}
-
-.nav-button:hover {
+    display: flex;
+    height: 61%;
+    padding: 12px 24px;
+    transition: all 0.2s ease-in;
+    position: relative;
+    overflow: hidden;
+    font-size: 19px;
+    color: white;
+    text-decoration: none;
+    z-index: 1;
+   }
+   
+   .nav-button:before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%) scaleY(1) scaleX(1.25);
+    top: 100%;
+    width: 140%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.05);
+    border-radius: 50%;
+    display: block;
+    transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+    z-index: -1;
+   }
+   
+   .nav-button:after {
+    content: "";
+    position: absolute;
+    left: 55%;
+    transform: translateX(-50%) scaleY(1) scaleX(1.45);
+    top: 180%;
+    width: 160%;
+    height: 190%;
     background-color: rgb(252, 112, 112);
-}
+    border-radius: 50%;
+    display: block;
+    transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+    z-index: -1;
+   }
+   
+   .nav-button:hover {
+    background-color: rgba(255, 255, 255, 0.055);
+   }
+   
+   .nav-button:hover:before {
+    top: -35%;
+    background-color: rgb(252, 112, 112);
+    transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+   }
+   
+   .nav-button:hover:after {
+    top: -45%;
+    background-color: rgb(252, 112, 112);
+    transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+   }
